crates/hydracache/tests/cacheable/fail_conflicting_ttl.stderr
error: cacheable_loader accepts only one TTL option: ttl or ttl_secs
  --> tests/cacheable/fail_conflicting_ttl.rs:10:19
   |
10 |       let _future = cacheable_loader!(
   |  ___________________^
11 | |         cache = cache,
12 | |         key = "value:1",
13 | |         ttl = std::time::Duration::from_secs(60),
14 | |         ttl_secs = 60,
15 | |         load = || async { Ok::<_, std::io::Error>(1_u64) },
16 | |     );
   | |_____^
   |
   = note: this error originates in the macro `cacheable_loader` (in Nightly builds, run with -Z macro-backtrace for more info)
